an existing connection is reused rather than closed